# SCALAR_HACKATHON

./: Dockerfile  HUGGINGFACE_SPACE_GUIDE.md  LICENSE  README.md  app.py  baselines.py  env.py  historical_weather.csv  inference.py  openenv.yaml  openenv_server.py  output.txt  pyproject.toml  requirements.txt  schemas.py  tasks.py
server/: app.py
